# graphtage

./: .gitignore  CITATION.cff  CLAUDE.md  CODEOWNERS  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py
bindist/: .gitignore  Makefile  graphtage_bin.py
docs/: .gitignore  Makefile  build_api.py  conf.py  filetype.rst  filetypes.rst  howitworks.rst  index.rst  printing.rst
graphtage/: __init__.py  __main__.py  ast.py  bounds.py  builder.py  concurrent.py  constraints.py  csv.py  dataclasses.py  debug.py  edits.py  expressions.py  fibonacci.py  filesystem.py  flamegraph.py  formatter.py  graphtage.py  json.py  levenshtein.py  matching.py  multiset.py  myers.py  object_set.py  parallel.py  pickle.py  plist.py  printer.py  progress.py  pydiff.py  search.py  sequences.py  toml.py  tree.py  utils.py  version.py  visitor.py  xml.py  yaml.py
master/: builders.html  extending.html  filetype.html  filetypes.html  genindex.html  graphtage.ast.html  graphtage.bounds.html  graphtage.builder.html  graphtage.constraints.html  graphtage.csv.html  graphtage.dataclasses.html  graphtage.debug.html  graphtage.expressions.html  graphtage.fibonacci.html  graphtage.formatter.html  graphtage.html  graphtage.json.html  graphtage.levenshtein.html  graphtage.matching.html  graphtage.multiset.html  graphtage.object_set.html  graphtage.pickle.html  graphtage.plist.html  graphtage.printer.html  graphtage.progress.html  graphtage.pydiff.html  graphtage.search.html  graphtage.sequences.html  graphtage.toml.html  graphtage.utils.html  graphtage.version.html  graphtage.xml.html  graphtage.yaml.html  howitworks.html  index.html  library.html  objects.inv  package.html  printing.html  py-modindex.html  (+2 more)
test/: benchmark_parallel.py  test_bounds.py  test_builder.py  test_constraints.py  test_dataclasses.py  test_expressions.py  test_fibonacci.py  test_formatting.py  test_graphtage.py  test_html.py  test_levenshtein.py  test_matching.py  test_myers.py  test_object_set.py  test_parallel.py  test_pydiff.py  test_search.py  test_timing.py  test_utils.py  test_visitor.py  test_xml.py  timing.py
v0.1.0/: graphtage.bounds.html  graphtage.csv.html  graphtage.expressions.html  graphtage.formatter.html  graphtage.html  graphtage.printer.html  graphtage.search.html  graphtage.sequences.html  graphtage.utils.html  graphtage.version.html  graphtage.xml.html  graphtage.yaml.html  library.html  objects.inv  printing.html  py-modindex.html  search.html  searchindex.js
v0.1.1/: extending.html  genindex.html  graphtage.bounds.html  graphtage.fibonacci.html  graphtage.formatter.html  graphtage.html  graphtage.multiset.html  graphtage.progress.html  graphtage.search.html  graphtage.sequences.html  graphtage.xml.html  graphtage.yaml.html  index.html  library.html  py-modindex.html  search.html
v0.2.0/: extending.html  graphtage.bounds.html  graphtage.expressions.html  graphtage.fibonacci.html  graphtage.json.html  graphtage.levenshtein.html  graphtage.matching.html  index.html  (+7 more)
(+228 files in other folders)
